<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_masukkan_dua_angka"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/idAngka1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_masukkan_angka_pertama"
        android:inputType="number" />

    <EditText
        android:id="@+id/idAngka2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_masukkan_angka_kedua"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_tambah"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_plus" />

        <Button
            android:id="@+id/btn_kurang"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_minus" />

        <Button
            android:id="@+id/btn_kali"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_kali" />

        <Button
            android:id="@+id/btn_bagi"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_bagi" />
    </LinearLayout>


    <TextView
        android:id="@+id/txt_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_hasil"
        android:textAlignment="center"
        android:textSize="20sp" />
</LinearLayout>